--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -3,7 +3,7 @@
     "Password": "Contraseña",
     "Remember Me": "Recuérdame",
     "Login": "Acceder",
-    "Forgot Your Password?": "¿Olvidaste tu contraseña?",
+    "Forgot Password ?": "¿Olvidaste tu contraseña?",
     "Register": "Registro",
     "Name": "Nombre",
     "Confirm Password": "Confirmar contraseña",
@@ -29,5 +29,17 @@
     "Before proceeding, please check your email for a verification link.": "Antes de poder continuar, por favor, confirma tu correo electrónico con el enlace que te hemos enviado.",
     "If you did not receive the email": "Si no has recibido el email",
     "click here to request another": "pulsa aquí para que te enviemos otro",
-    "All rights reserved.":  "Todos los derechos reservados."
+    "All rights reserved.":  "Todos los derechos reservados.",
+    "Sign In": "Iniciar Sesión",
+    "Purchase": "Compra ahora",
+    "Contact Us": "Contáctanos",
+    "Continue": "Continuar",
+    "Cancel": "Cancelar",
+    "Submit": "Enviar",
+    "About": "Nosotros",
+    "error": "error",
+    "errors": "errores",
+    "(and :count more :pluralized)": "(y :count :pluralized más)",
+    "Enter your email to reset your password.": "Ingresa tu correo para restaurar tu contraseña.",
+    "E-Mail": "Correo electrónico"
 }
