informacion personal y credenciales

--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -35,12 +35,36 @@
     "Contact Us": "Contáctanos",
     "Continue": "Continuar",
     "Cancel": "Cancelar",
+    "Change E-Mail": "Cambiar Correo",
+    "Update E-Mail": "Actualizar Correo",
+    "Current Password": "Contraseña Actual",
+    "Password Updated": "Contraseña Actualizada",
+    "New Password": "Contraseña Nueva",
+    "Confirm New Password": "Confirmar Contraseña Nueva",
+    "Update Password": "Actualizar Contraseña ",
+    "The new password must be at least 8 characters and have 1 Uppercase, 1 Lowercase and 1 number": "La nueva contraseña debe tener al menos 8 caracteres y tener 1 Mayúscula, 1 Minúscula y 1 Número",
     "Submit": "Enviar",
+    "Enter New Email Address": "Ingresa Nuevo Correo Electrónico",
     "About": "Nosotros",
     "error": "error",
     "errors": "errores",
     "(and :count more :pluralized)": "(y :count :pluralized más)",
     "Enter your email to reset your password.": "Ingresa tu correo para restaurar tu contraseña.",
     "Full Name": "Nombre Completo",
+    "Personal Information": "Información Personal",
+    "Company": "Compañia",
+    "Phone": "Teléfono",
+    "Credentials": "Credenciales",
+    "Settings": "Ajustes",
+    "Allowed file types": "Formatos Permitidos",
+    "Change avatar": "Cambiar Avatar",
+    "Web Site": "Sitio Web",
+    "Discard": "Descartar",
+    "Save Changes": "Guardar Cambios",
+    "Phone number must be active": "Se necesita un Teléfono de contacto",
+    "E-Mail Updated": "Correo electrónico actualizado",
+    "Company name": "Nombre de tu empresa",
+    "Phone Number": "Número de Teléfono",
+    "Personal Information Updated": "Información Personal Actualizada",
     "E-Mail": "Correo electrónico"
 }
