Ajuste platilla iconos, lengujajes, estilos, etc.

--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -14,7 +14,61 @@
     "If you did not request a password reset, no further action is required.": "Si no has solicitado un cambio de contraseña, puedes ignorar o eliminar este e-mail.",
     "Please confirm your password before continuing.": "Por favor confirme su contraseña antes de continuar.",
     "Regards": "Saludos",
+    "Account Details": "Detalles de la cuenta",
+    "Overview": "Resúmen",
+    "Account": "Cuenta",
+    "Account Settings": "Configuración de Cuenta",
+    "Account Overview": "Descripción General",
+    "Success Rate": "Tasa de éxito",
+    "Losses": "Perdidas",
+    "Activity Logs": "Registro de Actividad",
+    "Quick Search": "Búsqueda Rápida",
+    "Coming soon": "Proximámente",
+    "Upgrade": "Mejorar",
+    "Follow": "Seguir",
+    "Recently Searched": "Búsquedas Recientes",
+    "Earnings": "Ganancias",
+    "Support": "Soporte",
+    "Delete": "Borrar",
+    "Message": "Mensaje",
+    "Deleted": "Eliminado",
+    "Record Deleted": "Registro Eliminado",
+    "Modules": "Módulos",
+    "Help": "Ayuda",
+    "Level": "Nivel",
+    "Location": "Ubicación",
+    "Audit Log": "Log Auditoría",
+    "System Log": "Log Sistema",
+    "System": "Sistema",
+    "Date": "Fecha",
+    "Something went wrong": "Algo salió mal",
+    "Are you sure to delete this record?": "¿Deseas borrar este regisro?",
+    "Are you sure?": "¿Estas Seguro?",
+    "You won't be able to revert this!": "¡No podrás revertir esto!",
+    "Type": "Tipo",
+    "Subject": "Tema",
+    "Causer": "Causante",
+    "Created at": "Creado en",
+    "Description": "Descripción",
+    "Upgrade to Pro": "Mejorar a Pro",
     "Whoops!": "¡Ups!",
+    "Level Completion": "Finalización de nivel",
+    "Hello": "Hola",
+    "Actions": "Acciones",
+    "Buy Now": "Comprar",
+    "English": "Inglés",
+    "Spanish": "Español",
+    "German": "Alemán",
+    "Japanese": "Japónes",
+    "French": "Francés",
+    "Payments": "Pagos",
+    "Sign Out": "Salir",
+    "Language": "Lenguaje",
+    "My Subscription": "Mi Subscripción",
+    "Notifications": "Notificaciones",
+    "Billing": "Facturación",
+    "My Profile": "Mi Perfil",
+    "My Projects": "Mis Proyectos",
     "Hello!": "¡Hola!",
     "If you’re having trouble clicking the \":actionText\" button, copy and paste the URL below\ninto your web browser: [:actionURL](:actionURL)": "Si tienes problemas haciendo click en el botón \":actionText\", copia y pega el siguiente\nenlace en tu navegador: [:actionURL](:actionURL)",
     "If you’re having trouble clicking the \":actionText\" button, copy and paste the URL below\ninto your web browser: [:displayableActionUrl](:actionURL)": "Si tienes problemas haciendo click en el botón \":actionText\", copia y pega el siguiente\nenlace en tu navegador: [:displayableActionUrl](:actionURL)",
@@ -46,6 +100,7 @@
     "Submit": "Enviar",
     "Enter New Email Address": "Ingresa Nuevo Correo Electrónico",
     "About": "Nosotros",
+    "Our Site": "Nuestro Sitio",
     "error": "error",
     "errors": "errores",
     "(and :count more :pluralized)": "(y :count :pluralized más)",
@@ -60,6 +115,8 @@
     "Change avatar": "Cambiar Avatar",
     "Web Site": "Sitio Web",
     "Discard": "Descartar",
+    "Verified": "Verificado",
+    "Edit Profile": "Editar Perfil",
     "Save Changes": "Guardar Cambios",
     "Phone number must be active": "Se necesita un Teléfono de contacto",
     "E-Mail Updated": "Correo electrónico actualizado",
