menu y datatable de usuarios

--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -30,17 +30,20 @@
     "Earnings": "Ganancias",
     "Support": "Soporte",
     "Delete": "Borrar",
+    "Send Activation": "Enviar activación",
     "Message": "Mensaje",
     "Deleted": "Eliminado",
     "Record Deleted": "Registro Eliminado",
     "Modules": "Módulos",
     "Help": "Ayuda",
+    "Edit": "Editar",
     "Level": "Nivel",
     "Location": "Ubicación",
     "Audit Log": "Log Auditoría",
     "System Log": "Log Sistema",
     "System": "Sistema",
     "Date": "Fecha",
+    "Add User": "Agregar Usuario",
     "Something went wrong": "Algo salió mal",
     "Are you sure to delete this record?": "¿Deseas borrar este regisro?",
     "Are you sure?": "¿Estas Seguro?",
@@ -48,6 +51,7 @@
     "Type": "Tipo",
     "Subject": "Tema",
     "Causer": "Causante",
+    "Users": "Usuarios",
     "Created at": "Creado en",
     "Description": "Descripción",
     "Upgrade to Pro": "Mejorar a Pro",
@@ -102,6 +106,7 @@
     "About": "Nosotros",
     "Our Site": "Nuestro Sitio",
     "error": "error",
+    "Administration": "Administración",
     "errors": "errores",
     "(and :count more :pluralized)": "(y :count :pluralized más)",
     "Enter your email to reset your password.": "Ingresa tu correo para restaurar tu contraseña.",
