--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -38,6 +38,7 @@
     "Help": "Ayuda",
     "Edit": "Editar",
     "Level": "Nivel",
+    "Catalogs": "Catálogos",
     "Location": "Ubicación",
     "Audit Log": "Log Auditoría",
     "System Log": "Log Sistema",
@@ -113,7 +114,11 @@
     "Full Name": "Nombre Completo",
     "Personal Information": "Información Personal",
     "Company": "Compañia",
+    "Anouncements": "Anuncios",
     "Phone": "Teléfono",
+    "Group": "Grupo",
+    "Groups": "Grupos",
+    "Partners": "Compañeros",
     "Credentials": "Credenciales",
     "Settings": "Ajustes",
     "Allowed file types": "Formatos Permitidos",
