--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -9,6 +9,7 @@
     "Confirm Password": "Confirmar contraseña",
     "Reset Password": "Restablecer contraseña",
     "Reset Password Notification": "Aviso para restablecer contraseña",
+    "If you want to reset your password, click the following link:": "Si deseas restablecer tu contraseña, haz clic en el siguiente enlace:",
     "You are receiving this email because we received a password reset request for your account.": "Estás recibiendo este email porque se ha solicitado un cambio de contraseña para tu cuenta.",
     "This password reset link will expire in :count minutes.": "Este enlace para restablecer la contraseña caduca en :count minutos.",
     "If you did not request a password reset, no further action is required.": "Si no has solicitado un cambio de contraseña, puedes ignorar o eliminar este e-mail.",
@@ -36,8 +37,14 @@
     "Record Deleted": "Registro Eliminado",
     "Modules": "Módulos",
     "Help": "Ayuda",
+    "If you're having trouble clicking the \":actionText\" button, copy and paste the URL below\ninto your web browser:": "Si tienes problemas para hacer clic en el botón \":actionText\", copia y pega la URL de abajo en tu navegador web:",
+    "Greetings, ": "Saludos, ",
     "Edit": "Editar",
+    "Repeat Password": "Repetir Contraseña",
+    "Please wait...": "Por favor espera...",
     "Level": "Nivel",
+    "Confirm you e-mail and new password": "Confirma tu E-mail y nueva contraseña",
+    "Update Your Password": "Actualiza tu contraseña",
     "Catalogs": "Catálogos",
     "Location": "Ubicación",
     "Audit Log": "Log Auditoría",
