New pasword on forgot password

--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -57,6 +57,11 @@
     "Are you sure?": "¿Estas Seguro?",
     "You won't be able to revert this!": "¡No podrás revertir esto!",
     "Type": "Tipo",
+    "Use 8 or more characters with a mix of letters & numbers.": "Utilice 8 o más caracteres con una combinación de letras y números.",
+    "Password change successful. You will be redirected to login": "Cambio de contraseña exitoso. Será redirigido al login",
+    "The data entered does not match our records": "Los datos ingresados no coinciden con nuestros registros",
+    "The token has expired or is invalid": "El token ha expirado o es invalido",
+    "Something strange happened": "Algo extraño pasó'",
     "Subject": "Tema",
     "Causer": "Causante",
     "Users": "Usuarios",
