--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -47,16 +47,33 @@
     "Update Your Password": "Actualiza tu contraseña",
     "Catalogs": "Catálogos",
     "Location": "Ubicación",
+    "Bank": "Banco",
+    "Acount": "Cuenta",
+    "Tax Address": "Dirección Fiscal",
+    "Branch": "Sucursal",
+    "Holder": "Titular",
+    "Street": "Calle",
+    "City": "Ciudad",
+    "State": "Ciudad",
+    "Shipping Address": "Direción de Envíos",
+    "Postal Code": "Código Postal",
+    "Number": "Número",
+    "Neighborhood": "Colonia",
     "Audit Log": "Log Auditoría",
     "System Log": "Log Sistema",
     "System": "Sistema",
+    "Beneficiaries": "Beneficiarios",
+    "Authorized Person": "Persona Autorizada",
+    "Co-applicant": "Co-solicitante",
     "Date": "Fecha",
+    "Contact Information": "Información de Contacto",
     "Add User": "Agregar Usuario",
     "Something went wrong": "Algo salió mal",
     "Are you sure to delete this record?": "¿Deseas borrar este regisro?",
     "Are you sure?": "¿Estas Seguro?",
     "You won't be able to revert this!": "¡No podrás revertir esto!",
     "Type": "Tipo",
+    "Banking Information":"Información Bancaria",
     "Use 8 or more characters with a mix of letters & numbers.": "Utilice 8 o más caracteres con una combinación de letras y números.",
     "Password change successful. You will be redirected to login": "Cambio de contraseña exitoso. Será redirigido al login",
     "The data entered does not match our records": "Los datos ingresados no coinciden con nuestros registros",
