--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -34,6 +34,7 @@
     "Send Activation": "Enviar activación",
     "Message": "Mensaje",
     "Deleted": "Eliminado",
+    "If you require a change in the information please contact us.": "Si requieres un cambio en la infromación por favor contactanos",
     "Record Deleted": "Registro Eliminado",
     "Modules": "Módulos",
     "Help": "Ayuda",
@@ -43,16 +44,22 @@
     "Repeat Password": "Repetir Contraseña",
     "Please wait...": "Por favor espera...",
     "Level": "Nivel",
+    "Application": "Aplicación",
     "Confirm you e-mail and new password": "Confirma tu E-mail y nueva contraseña",
     "Update Your Password": "Actualiza tu contraseña",
     "Catalogs": "Catálogos",
+    "Be the first to receive our different catalogs": "Se el primero en recibir nuestros distintos cátalogos",
     "Location": "Ubicación",
     "Bank": "Banco",
     "Acount": "Cuenta",
     "Tax Address": "Dirección Fiscal",
     "Branch": "Sucursal",
     "Holder": "Titular",
+    "Payouts": "Pagos",
     "Street": "Calle",
+    "Receive a notification for every initiated payout": "Recibir una notificación por cada pago iniciado",
+    "Various notices and discounts that may be of interest to you": "Distintos avisos y descuentos que podrían ser de tu interés",
+    "Notices and discounts": "Avisos y descuentos",
     "City": "Ciudad",
     "State": "Ciudad",
     "Shipping Address": "Direción de Envíos",
