--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -17,6 +17,7 @@
     "Regards": "Saludos",
     "Account Details": "Detalles de la cuenta",
     "Overview": "Resúmen",
+    "Contact": "Contacto",
     "Account": "Cuenta",
     "Account Settings": "Configuración de Cuenta",
     "Account Overview": "Descripción General",
