--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -15,6 +15,10 @@
     "If you did not request a password reset, no further action is required.": "Si no has solicitado un cambio de contraseña, puedes ignorar o eliminar este e-mail.",
     "Please confirm your password before continuing.": "Por favor confirme su contraseña antes de continuar.",
     "Regards": "Saludos",
+    "FAQ": "Preguntas Frecuentes",
+    "Any questions?": "¿Tienes preguntas?",
+    "Catalog": "Catálogo",
+    "Download the catalog": "Descarga el Catálogo",
     "Account Details": "Detalles de la cuenta",
     "Overview": "Resúmen",
     "Contact": "Contacto",
