--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -21,6 +21,7 @@
     "Download the catalog": "Descarga el Catálogo",
     "Account Details": "Detalles de la cuenta",
     "Overview": "Resúmen",
+    "Invite": "Invitar",
     "Contact": "Contacto",
     "If you experienced an issue with the app, please write down the error code and take a screenshot. Then, send us an email with a detailed description of the problem. We will get back to you as soon as possible to help you.": "Si experimentaste un problema con la aplicación, anota el código de error y toma una captura de pantalla. Luego, envíanos un correo con una descripción detallada del problema. Nos pondremos en contacto contigo lo antes posible para ayudarte.",
     "Do you have any problems?": "¿Tienes algún problema?",
