--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -51,6 +51,7 @@
     "Help": "Ayuda",
     "If you're having trouble clicking the \":actionText\" button, copy and paste the URL below\ninto your web browser:": "Si tienes problemas para hacer clic en el botón \":actionText\", copia y pega la URL de abajo en tu navegador web:",
     "Greetings, ": "Saludos, ",
+    "Thanks for your support, ": "Gracias por tu apoyo, ",
     "Edit": "Editar",
     "Repeat Password": "Repetir Contraseña",
     "Please wait...": "Por favor espera...",
