agregar editar usuarios datatable

--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -24,6 +24,12 @@
     "Invite": "Invitar",
     "Levels": "Niveles",
     "Contact": "Contacto",
+    "Account AP": "Cuenta AP",
+    "Activate": "Activar",
+    "Active": "Activo",
+    "Inactive": "Inactivo",
+    "Status": "Estatus",
+    "Edit User": "Editar Usuario",
     "If you experienced an issue with the app, please write down the error code and take a screenshot. Then, send us an email with a detailed description of the problem. We will get back to you as soon as possible to help you.": "Si experimentaste un problema con la aplicación, anota el código de error y toma una captura de pantalla. Luego, envíanos un correo con una descripción detallada del problema. Nos pondremos en contacto contigo lo antes posible para ayudarte.",
     "Do you have any problems?": "¿Tienes algún problema?",
     "Account": "Cuenta",
