listado de grupos

--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -18,6 +18,8 @@
     "FAQ": "Preguntas Frecuentes",
     "Any questions?": "¿Tienes preguntas?",
     "Catalog": "Catálogo",
+    "Creator": "Creador",
+    "Add Group": "Agregar Grupo",
     "Download the catalog": "Descarga el Catálogo",
     "Account Details": "Detalles de la cuenta",
     "Overview": "Resúmen",
