--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -24,6 +24,7 @@
     "Account Details": "Detalles de la cuenta",
     "Overview": "Resúmen",
     "Invite": "Invitar",
+    "Add Level": "Agregar Nivel",
     "Levels": "Niveles",
     "Contact": "Contacto",
     "Account AP": "Cuenta AP",
