ajuste a carga de vue y sus componentes por error en DOM

--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -18,6 +18,7 @@
     "FAQ": "Preguntas Frecuentes",
     "Any questions?": "¿Tienes preguntas?",
     "Catalog": "Catálogo",
+    "Volume": "Volumen",
     "Creator": "Creador",
     "Add Group": "Agregar Grupo",
     "Download the catalog": "Descarga el Catálogo",
