Modulo usuarios completo, bonos y descuentos pendientes

--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -55,7 +55,7 @@
     "Send Activation": "Enviar activación",
     "Message": "Mensaje",
     "Deleted": "Eliminado",
-    "If you require a change in the information please contact us.": "Si requieres un cambio en la infromación por favor contactanos",
+    "If you require a change in the information please contact us.": "Si requieres un cambio en la información por favor contactanos",
     "Record Deleted": "Registro Eliminado",
     "Modules": "Módulos",
     "Help": "Ayuda",
@@ -83,7 +83,7 @@
     "Various notices and discounts that may be of interest to you": "Distintos avisos y descuentos que podrían ser de tu interés",
     "Notices and discounts": "Avisos y descuentos",
     "City": "Ciudad",
-    "State": "Ciudad",
+    "State": "Estado",
     "Shipping Address": "Direción de Envíos",
     "Postal Code": "Código Postal",
     "Number": "Número",
